# wfont

./: .gitignore  Cargo.toml  build.gradle.kts  lib.mjs  lib.wasm  test.html  test_recursive_ttf.html
java/: Main.java
src/: codepoint_names.rs  lib.rs  unicode.rs  unicode_blocks.rs
