[package]
name = "wfont"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.skera]
version = "0.1"
default-features = false
features = []

[dependencies.ttf2woff2]
version = "0.11"
default-features = false
features = []

[dependencies.wuff]
version = "0.2"
default-features = false
features = ["brotli"]

[dependencies.write-fonts]
version = "0.47"
default-features = false
features = ["read"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
